<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">XymonQV</string>
    <string name="current_status_prompt">Current Status:</string>
    <string name="last_updated_prompt">Last Updated:</string>
    <string name="prefs_title_hostname">HostName</string>
    <string name="prefs_summary_hostname">Enter the host name of the xymon server</string>
    <string name="title_prefs">Settings</string>
    <string name="prefs_title_username">Username</string>
    <string name="prefs_summary_username">Enter your username</string>
    <string name="prefs_title_ssl">Use SSL?</string>
    <string name="prefs_summary_ssl">Use SSL to connect to xymon</string>
    <string name="prefs_title_password">Password</string>
    <string name="prefs_summary_password">Password</string>
    <string name="prefs_title_category_ssl">SSL Options</string>
    <string name="title_refresh">Refresh</string>
    <string name="prefs_title_start_service">Start Service</string>
    <string name="prefs_title_stop_service">Stop Service</string>
    <string name="prefs_title_update_interval">Update Interval</string>
    <string-array name="interval_strings">
        <item >Manual</item>
        <item >10 Seconds</item>
        <item >30 Seconds</item>
        <item >2 Minutes</item>
        <item >5 Minutes</item>
        <item >10 Minutes</item>
    </string-array>
    <string-array name="interval_values">
        <item >0</item>
        <item >10000</item>
        <item >30000</item>
        <item >120000</item>
        <item >600000</item>
        <item >1200000</item>
    </string-array>
    <string-array name="parser_strings">
        <item >None</item>
        <item >4.2.3</item>
        <item >4.3.4</item>
        <item >API</item>
    </string-array>
    <string-array name="parser_values">
        <item ></item>
        <item >4.2.3</item>
        <item >4.3.4</item>
        <item >API</item>
    </string-array>
        <string name="prefs_dialog_title_update_interval">How often should xymon be checked?</string>
    <string name="menu_title_clear_history">Clear History</string>
    <string name="perms_send_data_notification_title">Send Xymon Data</string>
    <string name="perms_receive_data_notification_title">Receive Xymon Data</string>
    <string name="perms_send_data_notification_desc">Send notifications of new data from Xymon</string>
    <string name="perms_receive_data_notification_desc">Receive notifications of new data from Xymon</string>
    <string name="prefs_title_force_version">Force Parser Version</string>
    <string name="prefs_summary_force_version">Only do this if you know what you\'re doing!</string>
    <string name="prefs_title_advanced_settings">Advanced Settings</string>
    <string name="menu_item_about">About</string>
    <string name="prefs_title_debug_category">Debug Settings</string>
    <string name="prefs_title_enable_debug_log">Enable Debug Logging</string>
    <string name="prefs_summary_enable_debug_log">Turns on debug logging</string>
    <string-array name="view_strings">
        <item >Non-Green</item>
        <item >Critical</item>
    </string-array>
    <string-array name="view_values">
        <item >non_green</item>
        <item >critical</item>
    </string-array>
        <string name="prefs_title_use_view">View</string>
        <string name="prefs_summary_use_view">Choose Which View to Use</string>
        <string name="prefs_title_appfeed_filter">Filter</string>
        <string name="prefs_summary_appfeed_filter">Filter string to be used with appfeed.sh</string>
        <string name="prefs_title_port">Port</string>
        <string name="prefs_summary_port">Optional Port</string>
        <string name="prefs_title_path">Path</string>
        <string name="prefs_summary_path">Optional Path</string>
</resources>
