<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <EditTextPreference android:summary="@string/prefs_summary_hostname" android:title="@string/prefs_title_hostname" android:key="hostname" android:defaultValue="www.xymon.org"/><CheckBoxPreference
        android:disableDependentsState="false"
        android:key="use_ssl"
        android:summary="@string/prefs_summary_ssl"
        android:title="@string/prefs_title_ssl" android:defaultValue="false"/>

    <EditTextPreference
        android:key="username"
        android:summary="@string/prefs_summary_username"
        android:title="@string/prefs_title_username" />

    <EditTextPreference
        android:key="password"
        android:password="true"
        android:summary="@string/prefs_summary_password"
        android:title="@string/prefs_title_password" />
    
    <ListPreference
        android:dialogTitle="@string/prefs_dialog_title_update_interval"
        android:entries="@array/interval_strings"
        android:entryValues="@array/interval_values"
        android:key="update_interval"
        android:title="@string/prefs_title_update_interval" android:defaultValue="0"/>
    
    <ListPreference android:entries="@array/view_strings" android:key="use_view" android:title="@string/prefs_title_use_view" android:summary="@string/prefs_summary_use_view" android:entryValues="@array/view_values" android:defaultValue="non_green"/><PreferenceCategory android:title="@string/prefs_title_advanced_settings">
        
	    <ListPreference
    	    android:defaultValue=""
        	android:entries="@array/parser_strings"
	        android:entryValues="@array/parser_values"
	        android:key="force_version"
        	android:summary="@string/prefs_summary_force_version"
        	android:title="@string/prefs_title_force_version" />
	    
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/prefs_title_debug_category">
        
        <CheckBoxPreference
            android:defaultValue="false"
            android:summary="@string/prefs_summary_enable_debug_log"
            android:title="@string/prefs_title_enable_debug_log"
            android:key="enable_debug_log"/>
        
    </PreferenceCategory>
    

</PreferenceScreen>